<resources>
    <string name="_any">any</string>
    <string name="_at_time">\u0020at %s</string>
    <string name="_from_device">\u0020from %s</string>
    <string name="_none">none</string>
    <string name="_on_date_at_time">\u0020on %1$s at %2$s</string>
    <string name="_time_pattern" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="about">About</string>
    <string name="acceptable_phone_numbers">Acceptable phone numbers (%s)</string>
    <string name="acceptable_words">Acceptable phrases (%s)</string>
    <string name="add">Add</string>
    <string name="add_phone_to_blacklist">add phone to blacklist</string>
    <string name="add_phone_to_blacklist_action">Add phone to blacklist</string>
    <string name="add_phone_to_whitelist">add phone to whitelist</string>
    <string name="add_phone_to_whitelist_action">Add phone to whitelist</string>
    <string name="add_text_to_blacklist">add text to blacklist</string>
    <string name="add_text_to_blacklist_action">Add text to blacklist</string>
    <string name="add_text_to_whitelist">add text to whitelist</string>
    <string name="add_text_to_whitelist_action">Add text to whitelist</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="addresses">%d addresses</string>
    <string name="allow_control_remotely">Allow to control application by sending email on service account</string>
    <string name="allow_only_recipients">Accept service mail only from recipients</string>
    <string name="app_version">Application version: %s</string>
    <string name="ask_clear_history">Clear history?</string>
    <string name="ask_clear_list">Clear list?</string>
    <string name="bad_telegram_bot_token">Telegram bot token is invalid.</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="battery_optimization_reason">To ensure that the app continues to work properly when your device is in standby mode, disable battery optimization for the app.</string>
    <string name="blacklist">Blacklist</string>
    <string name="called_phone">Called: %1$s%2$s</string>
    <string name="caller_name">Caller name</string>
    <string name="caller_phone">Caller: %1$s%2$s</string>
    <string name="check_settings">Please check your settings</string>
    <string name="check_your_settings">Please check your settings</string>
    <string name="clear">Clear</string>
    <string name="contact_no_permission_read_contact">no permission to read contacts</string>
    <string name="copyright" translatable="false">Copyright © BoPr, 2016-2024</string>
    <string name="device_location">Device location</string>
    <string name="device_name">Device name</string>
    <string name="device_name_to_show">Device name to be shown in the message (leave blank to use default)</string>
    <string name="disabled">Disabled</string>
    <string name="dispatch_time">Dispatch time</string>
    <string name="do_not_ask_again">Don\'t ask me again</string>
    <string name="do_not_process_call">Do not process the call</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="email_content">Email content</string>
    <string name="email_language">Email language</string>
    <string name="email_message">Email message</string>
    <string name="email_message_content">Email message content</string>
    <string name="email_message_language">Email message language</string>
    <string name="email_message_summary">Email message settings</string>
    <string name="email_settings">Email settings</string>
    <string name="email_successfully_send">Email successfully sent</string>
    <string name="telegram_successfully_send">Telegram message successfully sent</string>
    <string name="sms_successfully_send">SMS successfully sent</string>
    <string name="enabled">Enabled</string>
    <string name="enter_phone_number">Enter phone number.</string>
    <string name="enter_phone_number_or_wildcard">Enter phone number. You also may use * as a wildcard.</string>
    <string name="error_sending_test_message">An error occurred while sending message.</string>
    <string name="event_time">Event time</string>
    <string name="email_processing_triggers">Events that trigger a message to be sent</string>
    <string name="geolocation_disabled">(location service disabled on device)</string>
    <string name="header">Header</string>
    <string name="history">History</string>
    <string name="history_is_empty">History is empty</string>
    <string name="how_to_notify">How to notify about events</string>
    <string name="ignored">Ignored</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_from">Incoming call from</string>
    <string name="incoming_call_of">Incoming call: %s</string>
    <string name="incoming_sms">Incoming SMS</string>
    <string name="incoming_sms_from">Incoming SMS from</string>
    <string name="info_notifications">Info notifications</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_recipient">Invalid recipient specified</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="item_already_exists">%s is already exists</string>
    <string name="last_known_location">Last known device location: %s</string>
    <string name="list_is_empty">List is empty</string>
    <string name="location_request_failed">Geolocation request failed</string>
    <string name="low_battery_level">Low battery level</string>
    <string name="mail_items_zero">No service mail</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="message_content">Message content</string>
    <string name="messengers">Messengers</string>
    <string name="missed_call">Missed call</string>
    <string name="missed_call_from">Missed call from</string>
    <string name="more_options">More options</string>
    <string name="new_history_items_zero">No new records</string>
    <string name="next_time">Next time</string>
    <string name="no_access_to_google_account">Application has no access to Google account</string>
    <string name="no_account_specified">No sender account specified.</string>
    <string name="no_network_try_later">No connection to server. Please try later</string>
    <string name="no_permission_read_location">(no permission to read location)</string>
    <string name="no_recipients_specified">No recipients specified</string>
    <string name="no_telegram_bot_token">Telegram bot token not specified</string>
    <string name="no_telegram_network_try_later">No connection to Telegram server. Please try later.</string>
    <string name="no_triggers_specified">All triggers are disabled</string>
    <string name="notifications">Notifications</string>
    <string name="notify_remote_actions">Display notification when actions are performed</string>
    <string name="notify_send_success">Display notification when message has been successfully sent</string>
    <string name="number_in_blacklist">Number was in blacklist</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="open_source">Open source</string>
    <string name="open_source_and_third_party">Open source and third party software</string>
    <string name="operation_complete">Operation complete</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="outgoing_call_of">Outgoing call: %s</string>
    <string name="outgoing_call_to">Outgoing call to</string>
    <string name="outgoing_sms">Outgoing SMS</string>
    <string name="outgoing_sms_to">Outgoing SMS to</string>
    <string name="pending">Pending</string>
    <string name="permission_rationale_coarse_location">Permission to %s is needed to add device location into message.</string>
    <string name="permission_rationale_fine_location">Permission to %s is needed to add device location into message.</string>
    <string name="permission_rationale_phone_state">Permission to %s is needed to send out message when phone calls are received or made.</string>
    <string name="permission_rationale_post_notifications">Permission to %s is needed to inform you about app status.</string>
    <string name="permission_rationale_read_contacts">Permission to %s is needed to add contact name into message.</string>
    <string name="permission_rationale_read_sms">Permission to %s is needed to send out message when SMS has sent.</string>
    <string name="permission_rationale_receive_sms">Permission to %s is needed to send out message when SMS has received.</string>
    <string name="permission_rationale_send_sms">Permission to %s is needed to redirect and remotely send out SMS.</string>
    <string name="permissions_required_for_operation">Required permissions not granted</string>
    <string name="phone_blacklist">Phone blacklist</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_filter">Phone number filter</string>
    <string name="phone_remotely_added_to_blacklist">Phone %s added to blacklist."</string>
    <string name="phone_remotely_added_to_whitelist">Phone %s added to whitelist."</string>
    <string name="phone_remotely_removed_from_blacklist">Phone %s removed from blacklist."</string>
    <string name="phone_remotely_removed_from_whitelist">Phone %s removed from whitelist."</string>
    <string name="phone_removed_from_filter">Phone %1$s removed from filter</string>
    <string name="phone_search_url">Phone search URL</string>
    <string name="phone_search_url_explanation">URL to search for unknown phone numbers (leave blank to use default)</string>
    <string name="phone_search_url_must_contain_phone_tag">URL must contain {phone} tag</string>
    <string name="phone_whitelist">Phone whitelist</string>
    <string name="proceed">Open settings</string>
    <string name="process_all_pending">Process pending</string>
    <string name="process_service_mail">Check service mail now</string>
    <string name="processed">Processed</string>
    <string name="processed_at">at: %s</string>
    <string name="recipient_already_exists">Recipient %1$s is already exists</string>
    <string name="recipient_device">Recipient:</string>
    <string name="recipients">Recipients</string>
    <string name="regular_expression">Regular expression</string>
    <string name="remote_action">Remote action</string>
    <string name="remote_control">Remote control</string>
    <string name="email_remote_control_account">Service account</string>
    <string name="remove">Remove</string>
    <string name="remove_phone_from_filter">Remove phone from all rules</string>
    <string name="remove_text_from_filter">Remove text from all rules</string>
    <string name="reply_ot_app">Reply to %s:</string>
    <string name="reset_dialogs">Reset dialogs</string>
    <string name="rules">Rules</string>
    <string name="send_test_email">Check sending email</string>
    <string name="send_test_sms_to_check_your_settings">Send test SMS to check your settings</string>
    <string name="sender">Account</string>
    <string name="telegram_bot_token">Telegram bot token</string>
    <string name="test_settings">Test the settings</string>
    <string name="text_filter">Text filter</string>
    <string name="triggers">Triggers</string>
    <string name="what_email_contains">Information that the message should contain</string>
    <string name="when_send_email">Conditions under which the message should be sent</string>
    <string name="whitelist">Whitelist</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="url" translatable="false">URL</string>
    <string name="test_pocketbase_connection">Test connection</string>
</resources>