<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceScreen
        android:icon="@drawable/ic_account_round"
        android:key="sender_account"
        android:title="@string/sender" />

    <androidx.preference.PreferenceScreen
        android:icon="@drawable/ic_recipient"
        android:key="recipients_address"
        android:title="@string/recipients" />

    <androidx.preference.PreferenceScreen
        android:icon="@drawable/ic_rules"
        android:key="rules"
        android:summary="@string/when_send_email"
        android:title="@string/rules" />

    <androidx.preference.MultiSelectListPreference
        android:dialogTitle="@string/email_message_content"
        android:entries="@array/email_content_names"
        android:entryValues="@array/email_content_values"
        android:icon="@drawable/ic_content"
        android:key="email_content"
        android:summary="@string/what_email_contains"
        android:title="@string/email_content" />

    <androidx.preference.EditTextPreference
        android:dialogMessage="@string/device_name_to_show"
        android:icon="@drawable/ic_device"
        android:inputType="textNoSuggestions"
        android:key="device_alias"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/device_name" />

    <androidx.preference.ListPreference
        android:dialogTitle="@string/email_language"
        android:entries="@array/language_names"
        android:entryValues="@array/email_locale_values"
        android:icon="@drawable/ic_language"
        android:key="email_locale"
        android:title="@string/email_message_language" />

    <androidx.preference.SwitchPreference
        android:key="notify_send_success"
        android:title="@string/notify_send_success" />

<!--
    <androidx.preference.SwitchPreference
        android:key="mark_processed_sms_as_read"
        android:title="@string/mark_processed_sms_as_read" />
-->

    <androidx.preference.Preference
        android:icon="@drawable/ic_remote"
        android:key="remote_control"
        android:title="@string/remote_control">
        <intent
            android:targetClass="com.bopr.android.smailer.ui.RemoteControlActivity"
            android:targetPackage="com.bopr.android.smailer" />
    </androidx.preference.Preference>

    <androidx.preference.PreferenceScreen
        android:icon="@drawable/ic_history"
        android:key="history"
        android:title="@string/call_history" />
</androidx.preference.PreferenceScreen>
