<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.MultiSelectListPreference
        android:dialogTitle="@string/email_message_content"
        android:entries="@array/email_content_names"
        android:entryValues="@array/email_content_values"
        android:icon="@drawable/ic_content"
        android:key="email_content"
        android:summary="@string/what_email_contains"
        android:title="@string/email_content" />

    <androidx.preference.ListPreference
        android:dialogTitle="@string/email_language"
        android:entries="@array/language_names"
        android:entryValues="@array/email_locale_values"
        android:icon="@drawable/ic_language"
        android:key="email_locale"
        android:title="@string/email_message_language" />

    <androidx.preference.EditTextPreference
        android:dialogMessage="@string/device_name_to_show"
        android:icon="@drawable/ic_device"
        android:inputType="textNoSuggestions"
        android:key="device_alias"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/device_name" />

    <androidx.preference.EditTextPreference
        android:dialogMessage="@string/phone_search_url_explanation"
        android:icon="@drawable/ic_search"
        android:inputType="textNoSuggestions"
        android:key="phone_search_url"
        android:selectAllOnFocus="true"
        android:title="@string/phone_search_url" />

</androidx.preference.PreferenceScreen>
