<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="pocketbase_messenger_enabled"
            android:icon="@drawable/ic_database"
            android:title="@string/enabled" />

    <PreferenceCategory>

        <EditTextPreference
                android:key="pocketbase_base_url"
                android:title="@string/url" />
        
        <EditTextPreference
                android:key="pocketbase_user"
                android:title="@string/user" />

        <EditTextPreference
                android:key="pocketbase_password"
                android:title="@string/password" />

    </PreferenceCategory>
    
    <PreferenceCategory>

        <Preference
                android:key="test_pocketbase_connection"
                android:icon="@drawable/ic_test_message"
                android:title="@string/test_settings"
                android:summary="@string/test_pocketbase_connection" />

    </PreferenceCategory>
    
</PreferenceScreen>
