<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreference
            android:key="telegram_messenger_enabled"
            android:icon="@drawable/ic_telegram"
            android:title="@string/enabled" />

    <androidx.preference.PreferenceCategory>

        <androidx.preference.EditTextPreference
                android:key="telegram_bot_token"
                android:title="@string/telegram_bot_token" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/message_content">
        <androidx.preference.CheckBoxPreference
                android:key="telegram_message_show_header"
                android:title="@string/header" />

        <androidx.preference.CheckBoxPreference
                android:key="telegram_message_show_event_time"
                android:title="@string/event_time" />

        <androidx.preference.CheckBoxPreference
                android:key="telegram_message_show_dispatch_time"
                android:title="@string/dispatch_time" />

        <androidx.preference.CheckBoxPreference
                android:key="telegram_message_show_caller"
                android:title="@string/caller_name" />

        <androidx.preference.CheckBoxPreference
                android:key="telegram_message_show_location"
                android:title="@string/device_location" />

        <androidx.preference.CheckBoxPreference
                android:key="telegram_message_show_device_name"
                android:title="@string/device_name" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory>

        <androidx.preference.Preference
                android:key="sent_test_telegram_message"
                android:icon="@drawable/ic_test_message"
                android:title="@string/send_test_telegram_message"
                android:summary="@string/send_test_telegram_message_summary" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
