<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreference
            android:key="email_messenger_enabled"
            android:icon="@drawable/ic_email"
            android:title="@string/enabled" />

    <androidx.preference.PreferenceCategory>

        <androidx.preference.Preference
                android:icon="@drawable/ic_account_round"
                android:key="sender_account"
                android:title="@string/sender" />

        <androidx.preference.Preference
                android:icon="@drawable/ic_recipient"
                android:key="recipients_address"
                android:title="@string/recipients">
            <intent
                    android:targetClass="com.bopr.android.smailer.ui.RecipientsActivity"
                    android:targetPackage="com.bopr.android.smailer" />
        </androidx.preference.Preference>

        <androidx.preference.MultiSelectListPreference
                android:dialogTitle="@string/email_message_content"
                android:entries="@array/email_content_names"
                android:entryValues="@array/email_content_values"
                android:icon="@drawable/ic_content"
                android:key="email_message_content"
                android:summary="@string/what_email_contains"
                android:title="@string/email_content" />

        <androidx.preference.ListPreference
                android:dialogTitle="@string/email_language"
                android:entries="@array/language_names"
                android:entryValues="@array/email_locale_values"
                android:icon="@drawable/ic_language"
                android:key="email_locale"
                android:title="@string/email_message_language" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@null">

        <androidx.preference.Preference
                android:key="sent_test_email"
                android:icon="@drawable/ic_test_message"
                android:title="@string/send_test_email"
                android:summary="@string/send_test_email_summary" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
