<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <MultiSelectListPreference
            android:icon="@drawable/ic_triggers"
            android:entries="@array/trigger_names"
            android:entryValues="@array/trigger_values"
            android:key="email_triggers"
            android:summary="@string/events_causing_sending_mail"
            android:title="@string/triggers" />

    <PreferenceCategory
            android:icon="@drawable/ic_call"
            android:title="@string/phone_number_filter">

        <Preference
                android:key="phone_blacklist"
                android:title="@string/blacklist">
            <intent
                    android:targetClass="com.bopr.android.smailer.ui.EventFilterPhoneBlacklistActivity"
                    android:targetPackage="com.bopr.android.smailer" />
        </Preference>

        <Preference
                android:key="phone_whitelist"
                android:title="@string/whitelist">
            <intent
                    android:targetClass="com.bopr.android.smailer.ui.EventFilterPhoneWhitelistActivity"
                    android:targetPackage="com.bopr.android.smailer" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:icon="@drawable/ic_text"
            android:title="@string/text_filter">

        <Preference
                android:key="text_blacklist"
                android:title="@string/blacklist">
            <intent
                    android:targetClass="com.bopr.android.smailer.ui.EventFilterTextBlacklistActivity"
                    android:targetPackage="com.bopr.android.smailer" />
        </Preference>

        <Preference
                android:key="text_whitelist"
                android:title="@string/whitelist">
            <intent
                    android:targetClass="com.bopr.android.smailer.ui.EventFilterTextWhitelistActivity"
                    android:targetPackage="com.bopr.android.smailer" />
        </Preference>

    </PreferenceCategory>


</PreferenceScreen>
